# sandbox-flight-planner

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat  start.sh
.claude/: settings.local.json
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts
src/agent/: config.py  graph.py  main.py  state.py  tools.py
src/api/: agent_routes.py  data.py  main.py  models.py  routes.py
