[project]
name = "sandbox-flight-planner"
version = "0.1.0"
description = "Agentic flight planner sandbox using LangGraph and FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "langgraph>=1.1.9",
    "langchain-openai>=1.2.1",
    "langchain-huggingface>=1.2.2",
    "langchain-core>=1.3.2",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
flight-agent = "src.agent.main:run"
flight-api = "src.api.main:start"
